# LLM_Criteria_Gemma

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION_GUIDE.md  BINARY_CLASSIFICATION.md  CLAUDE.md  Dockerfile  HARDWARE_OPTIMIZATION.md  HYDRA_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_COMMANDS.md  MAKEFILE_GUIDE.md  MLFLOW_TRACKING.md  MODEL_CARD.md  Makefile  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  README_NLI.md  REFACTORING_SUMMARY.md  RUN_5FOLD.md  UPDATE_LOG.md  VERIFY.md  VISUALIZATION_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-pinned.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  release.yml  tests.yml
benchmarks/: README.md  __init__.py  benchmark_data_loading.py  benchmark_poolers.py
conf/: config.yaml  config_binary.yaml  config_nli.yaml  experiment_tracking.yaml
conf/experiment/: full_5fold.yaml  nli_full_5fold.yaml  nli_imbalanced.yaml  nli_quick_test.yaml  quick_test.yaml  rtx3090_max_perf.yaml  rtx3090_optimized.yaml  rtx3090_ultra.yaml
conf/hardware/: cpu.yaml  gpu_3090.yaml  gpu_4090.yaml  gpu_low_mem.yaml
data/DSM5/: MDD_Criteria.json
docker/: README.md
docs/: BINARY_NLI_CRITERIA_MATCHING.md  CONTRIBUTING.md  EXPERIMENT_TRACKING.md  MAKEFILE_QUICKREF.md  RTX3090_OPTIMIZATIONS.md
scripts/: benchmark_performance.py  run_baselines.sh  run_hpo.py  test_nli_dataset.py  verify_optimizations.py
src/calibration/: __init__.py  binary_calibration.py  isotonic_calibration.py  metrics.py  temperature_scaling.py  threshold_optimization.py
src/cli/: __init__.py  merge_oof.py  run_eval.py
src/data/: __init__.py  annotations_utils.py  binary_dataset.py  cv_splits.py  dsm5_criteria.py  length_bucketing.py  nli_cv_splits.py  redsm5_dataset.py  redsm5_nli_dataset.py
src/inference/: __init__.py  predict_nli.py
src/models/: __init__.py  dora.py  gemma_encoder.py  gemma_encoder_binary.py  poolers.py
src/training/: evaluate.py  evaluate_nli_binary.py  train_binary.py  train_gemma.py  (+4 more)
tests/: README.md  __init__.py  conftest.py  test_binary_dataset.py  test_calibration.py  test_data.py  test_data_leakage.py  test_integration.py  test_model_correctness.py  test_nli_dataset.py  test_poolers.py
(+20 files in other folders)
